<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/item_home_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        tools:ignore="ContentDescription"
        />

    <TextView
        android:id="@+id/house_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toStartOf="@+id/item_home_button"
        app:layout_constraintStart_toEndOf="@+id/item_home_image"
        app:layout_constraintTop_toTopOf="@+id/item_home_image" />

    <TextView
        android:id="@+id/house_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLength="30"
        android:text="@string/home_description"
        android:textSize="16sp"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/house_memo"
        app:layout_constraintEnd_toEndOf="@+id/house_name"
        app:layout_constraintStart_toStartOf="@+id/house_name"
        app:layout_constraintTop_toBottomOf="@+id/house_name" />

    <TextView
        android:id="@+id/house_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="4dp"
        android:text="@string/no_operation_information"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/item_home_image"
        app:layout_constraintStart_toStartOf="@+id/house_info" />

    <ImageButton
        android:id="@+id/item_home_button"
        android:layout_height="28dp"
        android:layout_width="24dp"
        android:background="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_home_image"
        app:layout_constraintBottom_toBottomOf="@id/item_home_image"/>

</androidx.constraintlayout.widget.ConstraintLayout>